# Homework_10_sample

./: pyproject.toml
hw_sample/: manage.py
hw_sample/hw_sample/: asgi.py  settings.py  urls.py  wsgi.py
hw_sample/quotes/: views.py
hw_sample/quotes/static/quotes/: style.css
hw_sample/quotes/templates/quotes/: base.html  index.html
